--- a/src/scss/_slashdot.scss
+++ b/src/scss/_slashdot.scss
@@ -19,9 +19,8 @@
     font-family: $font-stack;
     font-size: 1.16em;
     color: dimgrey;
-    @include respect-dark-mode;
     margin: 0px;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid $border-color;
     padding: 8px 0;
     width: 250px;
   }
@@ -46,7 +45,6 @@
     float: left;
     padding: 5px 0 0 10px;
     color: dimgrey;
-    @include respect-dark-mode;
     ul {
       list-style-type: none;
       .section-title {
